sanitizeURL can throw URISyntaxException.